--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: timfether.com
+title: Tim Fether
 email: tim@timfether.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.timfether.com" # the base hostname & protocol for your site, e.g. http://example.com
